# gitsight-data-pipeline

./: .env.local  .gitignore  Dockerfile-Airflow  Dockerfile-Spark  Makefile  README.md  build.gradle  docker-compose-local.yaml  local-values.yaml  pyproject.toml  skaffold.yaml
.github/workflows/: airflow-cd.yaml  airflow-ci.yaml  spark-cd.yaml  spark-ci-cd.yml  spark-ci.yaml
dags/: fetch_gharchive_dag.py  gharchive_events_ingest_dag.py  github_events_transform_dag.py  repo_actor_master_transform_dag.py  sample_k8s_dag.py  update_dim_actor_scd_dag.py  update_repo_contribution_metrics_daily_dag.py  update_repo_metrics_daily_dag.py  update_repo_metrics_hourly_dag.py
docker/airflow/: Dockerfile
docker/spark/: Dockerfile
include/spark/common/: decorators.py  dependencies.py  gx.py  nessie.py  session_factory.py
include/spark/jobs/: extract_actor_meta_from_bronze_events_job.py  extract_repo_meta_from_bronze_events_job.py  load_actor_master_to_silver_job.py  load_oltp_gold_repo_metrics_hourly_to_staging_job.py  load_repo_master_to_silver_job.py  sample_spark_job.py  transform_silver_events_from_bronze_job.py  transform_silver_watch_events_from_bronze_job.py  update_gold_repo_metrics_hourly_job.py
include/spark/utils/: arg_parse_utils.py  catalog_utils.py  col_utils.py  condition_utils.py  country_utils.py  github_utils.py  jdbc_utils.py  logger_utils.py  time_utils.py
k8s/: airflow-spark-rbac.yaml
k8s/airflow/: Chart.yaml  values.yaml
k8s/airflow/templates/: airflow-image-updater.yaml  airflow-spark-rbac.yaml  spark-driver-rbac.yaml
k8s/argocd/: airflow-image-updater.yaml  values.yaml
k8s/ci/: airflow-ci.yaml  spark-ci.yaml
k8s/local/airflow/: Chart.yaml  (+1 more)
k8s/minio/: Chart.yaml  values.yaml
k8s/nessie/: Chart.yaml  values.yaml
k8s/postgres/: Chart.yaml  values.yaml
k8s/spark-operator/: Chart.yaml  values.yaml
k8s/zot/: Chart.yaml  values.yaml
notebooks/: conf_utils.py
plugins/hook/: gh_archive.py  github.py
scripts/: build-airflow.sh  build-spark.sh  init_db.sh  run_airflow.sh  run_spark.sh  setup_local_cluster.sh
test/: time_test.py
(+60 files in other folders)
