[project]
name = "gitsight-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-amazon>=9.21.0",
    "apache-airflow-providers-apache-spark>=5.2.1",
    "dotenv>=0.9.9",
    "pyarrow>=22.0.0",
    "pyspark==3.5.1",
]

[dependency-groups]
dev = [
    "apache-airflow==3.1.2",
    "notebook>=7.5.4",
    "ruff>=0.15.4",
]
