[project]
name = "gitsight-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.12.1",
    "apache-airflow-providers-amazon>=9.21.0",
    "apache-airflow-providers-cncf-kubernetes>=10.14.0",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "flashgeotext>=0.5.5",
    "great-expectations>=0.18.22,<1.0.0",
    "grpcio>=1.78.0",
    "grpcio-status>=1.78.0",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pycountry>=26.2.16",
    "pyiceberg>=0.11.1",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "apache-airflow==3.1.2",
    "notebook>=7.5.4",
    "polars>=1.38.1",
    "pyspark==3.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
